# greenlet-pyodide

./: .pre-commit-config.yaml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
src/greenlet/: __init__.py
tests/: conftest.py  run_tests.mjs  test_basic.py
tests/upstream/: __init__.py  conftest.py  leakcheck.py  test_greenlet.py
